简化源码目录

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ FetchContent_MakeAvailable(spdlog)
 
 add_executable(anim 
     src/main.cpp
+    src/glad/glad.c
 )
 
 target_link_libraries(anim PRIVATE
