--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # 项目配置
 # ====================================
 
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.28)
 project(
     anim 
     VERSION 0.1.0 
@@ -16,11 +16,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
 if(WIN32)
-    if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-        add_compile_definitions(NOMINMAX)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fms-extensions -fms-compatibility")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_HAS_AUTO_PTR_ETC=1")
-    endif()
+    add_compile_definitions(NOMINMAX)
 endif()
 
 
@@ -34,11 +30,9 @@ set(FETCHCONTENT_QUIET OFF)
 set(FETCHCONTENT_UPDATES_DISCONNECTED ON)
 
 set(_PREV_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
-set(_PREV_CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE})
 
 # 都使用静态链接
 set(BUILD_SHARED_LIBS OFF)
-set(CMAKE_BUILD_TYPE Release)
 
 # SDL3
 set(SDL_TEST_LIBRARY OFF)
@@ -63,9 +57,6 @@ FetchContent_MakeAvailable(spdlog)
 
 # dawn
 set(DAWN_FETCH_DEPENDENCIES ON)
-set(TINT_BUILD_TESTS OFF)
-set(DAWN_BUILD_TESTS OFF)
-set(DAWN_SKIP_GOOGLETEST ON)
 FetchContent_Declare(
     dawn
     GIT_REPOSITORY "https://github.com/google/dawn.git"
@@ -78,7 +69,6 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(dawn)
 
 set(BUILD_SHARED_LIBS ${_PREV_BUILD_SHARED_LIBS})
-set(CMAKE_BUILD_TYPE ${_PREV_CMAKE_BUILD_TYPE})
 
 
 # ====================================
@@ -92,6 +82,7 @@ add_executable(anim
 target_link_libraries(anim PRIVATE
     SDL3::SDL3
     spdlog::spdlog_header_only
+    dawn::webgpu_dawn
 )
 
 if(MSVC)
